Bug 295106 - The reset button in kcm_ktp_chat_apparence is not working
Summary: The reset button in kcm_ktp_chat_apparence is not working
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui (other bugs)
Version First Reported In: git-latest
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: Future
Assignee: nickl
URL:
Keywords:
Depends on:
Blocks: extramile
  Show dependency treegraph
 
Reported: 2012-03-01 00:12 UTC by Daniele E. Domenichelli
Modified: 2024-10-08 11:25 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniele E. Domenichelli 2012-03-01 00:12:19 UTC
Clicking the reset button should set the current chat theme, but at the moment it does nothing, it just disables the apply button
Comment 1 Daniele E. Domenichelli 2012-03-01 00:13:39 UTC
I forgot to say that the problem is in the theme config
Comment 2 nickl 2012-07-18 15:48:43 UTC
I am working on this, could you please assign this task to me? Thanks.
Comment 3 nickl 2012-07-20 22:51:26 UTC
Bug fix code is now sent for reviewing.
Comment 4 Martin Klapetek 2012-08-07 15:49:46 UTC
Git commit 4b94504230cf300161a23c83948cdd909efb4064 by Martin Klapetek, on behalf of Nick Lou.
Committed on 07/08/2012 at 17:47.
Pushed by mklapetek into branch 'master'.

Make the 'Reset' button in chat appearance config window work

REVIEW: 105701
FIXED-IN: 0.5

M  +33   -10   config/appearance-config.cpp
M  +3    -1    config/appearance-config.h

http://commits.kde.org/telepathy-text-ui/4b94504230cf300161a23c83948cdd909efb4064