Make the 'Reset' button in chat appearance config window work

REVIEW: 105701
BUG: 295106
FIXED-IN: 0.5